Mobile Menu Nav: - adds space between logo and dropdown nav items - fix: focus outline cut off on logo  and nav items - fix: second level nav items focus size match the rest of items - fix: second level nav items color match the rest of the items
https://github.com/ALASdoo/alasdoo_com_v2/issues/215

--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -66,12 +66,6 @@ video {
   }
 }
 
-@media (max-width: 1200px) {
-  .navbar > .container {
-    max-height: 100vh;
-    overflow: auto;
-  }
-}
 
 .slide-text-container {
   display: inline-block;
