--- a/assets/scss/templates/_navigation.scss
+++ b/assets/scss/templates/_navigation.scss
@@ -28,7 +28,6 @@
   }
 
   .navbar-brand {
-    &:focus-visible,
     &:active {
       outline: none;
     }
@@ -82,6 +81,29 @@
     }
   }
  
+  /** Scroll Dropdown nav menu on mobile screen
+    when 200% zoom in
+  */
+  @media (max-width: 1200px) {
+    .navbar > .container {
+      max-height: 100vh;
+    }
+    .navbar-nav {
+      max-height: calc(100vh - 100px);
+      overflow-y: auto;
+      margin-block: 0.5rem;
+    }
+    
+    // Fix: focus outline cut off 
+    .nav-link {
+      margin-inline-start: 4px;
+      margin-block-start: 4px;
+      &:last-child {
+        margin-block-end: 4px;
+      }
+    }
+  }
+
 
   .nav-item {
     .nav-link {
@@ -162,21 +184,24 @@
       columns: 1 !important;
       background-color: #E9FFFB;
     }
+
     .dropdown-item {
       padding: 8px 15px;
       display: inline-block;
-      @include desktop-lg {
-        padding: 6px;
-      }
+      width: auto;
+  
       font-size: 0.9rem;
       color: $text-dark !important;
       border-radius: 6px;
+
+      @include desktop-lg {
+        padding: 6px;
+      }
 
       &:focus,
       &:hover,
       &.active,
       &:active {
-        color: $color-primary !important;
         background-color: transparent;
       }
     }
